# carGPT

./: .env.example  Makefile  README.md  commands.txt  docker-compose.yaml  docker-compose.yml  langgraph_streaming_test.py  multiple_tor_instances.py  pyproject.toml  scraper_with_proxy.py  selenium_scraper.ipynb  tor_scraper.py  tor_scraper_new.py  tor_scraper_new_2.py  tor_scraper_selenium.py  tor_scraper_working_no_selenium.py  urls.txt
.devcontainer/: Dockerfile  devcontainer.json
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README-Docker.md  docker-compose.yml  logging_config.yaml  logging_config_base.yaml  pyproject.toml
backend/src/backend/: constants.py  logging_config.py  main.py  models.py  paths.py  system_prompt.txt  translations.py  ttt.py
backend/src/backend/database/: __init__.py  columns.py  database.py  init.sql
backend/src/backend/examples/: test_database_mcp_server.py
backend/src/backend/mcp_servers/database/: server.py  test_server.py
backend/src/backend/session/: session.py
backend/tests/: test_database.py  test_session.py
carGPT/backend/: .env.example  Dockerfile  Makefile  __init__.py  columns.py  docker-compose.prod.yml  docker-compose.yml  main.py  main.py__  pyproject.toml  start_server.sh  test_api.py  translations.py  ttt copy.py  ttt.py
carGPT/backend/database/: database.py  init.sql
carGPT/backend/tests/: test_database.py
carGPT/database/: database.py
carGPT/examples/: chatbot_with_memory.py  google_search.py  langgraph_memory.py  langgraph_memory_updated.py  langgraph_streaming.py  langgraph_streaming_backup.py  llm_chain.py  main_extract_from_article.py  main_find_articles.py  sql_read.py
carGPT/frontend/: Dockerfile  app.py  pyproject.toml
carGPT/scraper/: main.py
carGPT/scraper/scraper/: items.py  pipelines.py  settings.py  translations.py
carGPT/scraper/scraper/spiders/: njuskalo_spider.py
docker/database/: init.sql
frontend/: Makefile  pyproject.toml
frontend/src/frontend/: main.py
mcp_servers/: Makefile  logging_config.yaml  pyproject.toml
mcp_servers/src/mcp_servers/: __init__.py  paths.py
mcp_servers/src/mcp_servers/database/: server.py
mcp_servers/src/mcp_servers/perplexity/: server.py
scraper/: .gitignore  logging_config.yaml  pyproject.toml  urls_new.txt
scraper/scripts/: download_tor.sh
scraper/src/scraper/: logger.py  paths.py  ttt.py  utils.py
scripts/: download_tor.sh  init_db.py  init_db_postgresql.ipynb  init_db_postgresql.py  test_api.py  test_insertion_into_postrges.ipynb
shared/: logging_config_base.yaml  pyproject.toml
shared/src/shared/: logging_config.py  paths.py  translations.py
shared/src/shared/database/: __init__.py  columns.py  database.py  init.sql  utils.py
shared/src/shared/session/: __init__.py  session.py  test_session.py
shared/tests/: conftest.py  test_database.py  test_session.py
