[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kuzzmak", email = "kuzminski.antonio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "htbuilder>=0.9.0",
    "streamlit>=1.48.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
