[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kuzzmak", email = "kuzminski.antonio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "shared",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { path = "../shared", editable = true }
