[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kuzzmak", email = "kuzminski.antonio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.2.11",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "testcontainers>=4.12.0",
]
