[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kuzzmak <kuzminski.antonio@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain-community = "^0.3.12"
langchain-openai = "^0.2.12"
langgraph = "^0.2.59"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"

[tool.ruff]
line-length = 79
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
