[project]
name = "cargpt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "pysocks>=1.7.1",
    "requests[socks]>=2.32.4",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]
