[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["kuzzmak <kuzminski.antonio@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
